--- a/FrigateApp/FrigateApp.csproj
+++ b/FrigateApp/FrigateApp.csproj
@@ -6,9 +6,17 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	<PublishAot>true</PublishAot>
+	<!-- Necessary before Avalonia 12.0, was used for accessiblity APIs -->
+	<BuiltInComInteropSupport>false</BuiltInComInteropSupport>
+	<PublishTrimmed>true</PublishTrimmed>
+	<TrimMode>link</TrimMode>
+	<TrimmerDefaultAction>link</TrimmerDefaultAction>
+	<SuppressTrimAnalysisWarnings>false</SuppressTrimAnalysisWarnings>
   </PropertyGroup>
 
   <ItemGroup>
+	<TrimmerRootDescriptor Include="TrimmerRoots.xml" />
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
 
