--- a/FrigateApp/FrigateApp.csproj
+++ b/FrigateApp/FrigateApp.csproj
@@ -40,5 +40,6 @@
     <PackageReference Include="VideoLAN.LibVLC.Android" Version="3.6.5" />
     <PackageReference Include="RtspClientSharp" Version="1.3.3" />
     <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.23" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
