--- a/FrigateApp/FrigateApp.csproj
+++ b/FrigateApp/FrigateApp.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -37,9 +37,8 @@
     <PackageReference Include="LibVLCSharp.Avalonia" Version="3.9.5" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="10.0.2" />
     <PackageReference Include="System.Management" Version="10.0.2" />
-    <PackageReference Include="VideoLAN.LibVLC.Android" Version="3.6.5" />
-    <PackageReference Include="RtspClientSharp" Version="1.3.3" />
     <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.23" />
+    <PackageReference Include="RtspClientSharp" Version="1.3.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
